# applydiff

./: .gitattributes  .gitignore  AI_ASSESSMENT_THIS VERSION.md  Cargo.toml  SAFETY.md  TESTING.md  index.html  readme.md  roadmap.md  standalone_test  standalone_test.rs
_backend/: Cargo.toml  tauri.conf.json
_backend/.applydiff/: session.json
_backend/.applydiff/saccade/: PACK.txt  PACK_STAGE2_COMPRESSED.xml
_backend/src/: commands.rs  lib.rs  main.rs
ai-pack/: PACK.txt  PACK_STAGE2_COMPRESSED.xml
app/: app-state.js  console-panel.js  index.html  patch-panel.js  styles.css  ui-helpers.js
app/lib/: app-state.js  tauri-bridge.js  ui-helpers.js
app/panels/: ConsolePanel.js  DiffPanel.js  HistoryPanel.js  PatchPanel.js
core/: Cargo.toml
core/src/: apply.rs  error.rs  lib.rs  logger.rs  matcher.rs  prompts.rs  test_helpers.rs  test_runner.rs
core/src/engine/: apply.rs  backup.rs  mod.rs
core/src/engine/match/: match_exact.rs  match_fuzzy.rs  match_normalize.rs  mod.rs
core/src/match/: match_exact.rs  match_fuzzy.rs  match_normalize.rs  mod.rs
core/src/parse/: mod.rs  parse_armored.rs  parse_base64.rs  parse_classic.rs
core/src/session/: mod.rs  prompts.rs  state.rs
crates/applydiff-core/: Cargo.toml
crates/applydiff-core/src/: apply.rs  lib.rs  parser.rs
docs/: biomimetic-patch-format-v3.md  ideas.md  readme.md  roadmap.md  testing.md
gauntlet/: Cargo.toml
gauntlet/src/: main.rs
public/: index.html
public/css/: styles.css
public/js/: console-panel.js  diff-panel.js  patch-panel.js  tauri-bridge.js  version-tabs.js
saccade/: Cargo.toml  LICENSE
saccade/cli/src/: main.rs
saccade/core/: Cargo.toml
saccade/core/src/: config.rs  detection.rs  enumerate.rs  error.rs  filter.rs  guide.rs  heuristics.rs  lib.rs  manifest.rs  parser.rs  request.rs  stage0.rs  stage1.rs  stage2.rs
src/: apply.rs  backup.rs  error.rs  gauntlet.rs  git.rs  index.html  logger.rs  main.rs  matcher.rs  prompts.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: apply.rs  backup.rs  commands.rs  error.rs  git.rs  logger.rs  main.rs  matcher.rs  parser.rs  prompts.rs  tauri_commands.rs
tests/: generate_large_files.rs
tests/03-path-traversal/: meta.json  patch.txt
tests/05-large-file/: meta.json  patch.txt
tests/06-ambiguity-simple/before/: config.yml
tests/07-ambiguity-indent/before/: config.py
tests/08-crlf-preserve/: meta.json  patch.txt  verify_bytes.sh
tests/08-crlf-preserve/after/: harmonize.txt  mixed.txt  unix.txt
tests/AFB01-Armored-Append-Create/: meta.json  patch.txt
tests/AFB01-Armored-Append-Create/after/new/deep/: hello.txt
tests/AFB02-Armored-Replace-Exact/: meta.json  patch.txt
tests/AFB02-Armored-Replace-Exact/after/: hello.txt
tests/FS02-Append-Create/: meta.json  patch.txt
tests/FS02-Append-Create/after/new/deep/: file.txt
tests/LF01-Replace-Start/after/: large_file.txt
tests/LF01-Replace-Start/before/: large_file.txt
tests/MA01a-Simple-Ambiguity/: meta.json  patch.txt
tests/MA01b-Indentation-Ambiguity/: meta.json  patch.txt
ui/: main.slint
