[package]
name = "applydiff"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tauri v2
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Core (keep these)
regex = "1"
thiserror = "1"
similar = "2"
strsim = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
