[package]
name = "saccade-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
ignore.workspace = true
walkdir.workspace = true
chrono.workspace = true
dunce = "1.0.4"

# --- UNIFIED AND UPDATED TREE-SITTER ECOSYSTEM ---
tree-sitter = "0.22.6"
tree-sitter-javascript = "0.21.0"
tree-sitter-typescript = "0.21.0"
tree-sitter-rust = "0.21.1"
tree-sitter-python = "0.21.0"
tree-sitter-cmake = "0.5.0"

rayon = "1"
glob = "0.3"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3"