[package]
name = "saccade-core"
version = "0.1.0"
edition = "2021"
authors = ["juno"]
license = "MIT"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
ignore = "0.4"
walkdir = "2.0"
chrono = "0.4"
dunce = "1.0.4"
tree-sitter = "0.22.6"
tree-sitter-javascript = "0.21.0"
tree-sitter-typescript = "0.21.0"
tree-sitter-rust = "0.21.1"
tree-sitter-python = "0.21.0"
tree-sitter-cmake = "0.5.0"
rayon = "1"
glob = "0.3"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3"
